# tiny_llama

./: CMakeLists.txt  README.md  test_tiny_llama_api
data/: README.md  WEIGHT_FORMAT.md  merges.txt  vocab.txt
examples/: CMakeLists.txt  advanced_usage.cpp  basic_usage.cpp  tokenizer_demo.cpp  weight_loading_demo.cpp
include/tiny_llama/: exceptions.hpp  matrix.hpp  model.hpp  tiny_llama.hpp  tokenizer.hpp
src/: attention.cpp  ffn.cpp  matrix.cpp  model.cpp  tiny_llama.cpp  tokenizer.cpp
tests/: CMakeLists.txt  api_error_handling_test_driver.cpp  create_test_data.cpp  ffn_test_driver.cpp  generate_test_data.cpp  integration_test_driver.cpp  parameter_validation_test_driver.cpp  test_api_error_handling.cpp  test_attention.cpp  test_exceptions.cpp  test_ffn.cpp  test_integration.cpp  test_main.cpp  test_matrix.cpp  test_model.cpp  test_model_weights.cpp  test_parameter_validation.cpp  test_tiny_llama_api.cpp  test_tokenizer.cpp  test_tokenizer_api.cpp  test_transformer_block.cpp  test_weight_population.cpp  tokenizer_test_driver.cpp  transformer_block_test_driver.cpp  vocabulary_test_driver.cpp
